--- a/_profiles/93Jenna Huang.html
+++ b/_profiles/93Jenna Huang.html
@@ -3,7 +3,7 @@ layout: profile
 profileImage: /assets/images/portraits/jenna_huang/jenna_huang-home.jpg
 firstName: Jenna
 lastName: Huang
-occupation: Intentional Living/Yoga Enthusiast • Techie • Entrepreneur
+occupation: Intentional Living & Yoga Enthusiast • Techie • Entrepreneur
 factCategory: Breakfast
 factFact: Congee
 playlistLink:
@@ -34,9 +34,16 @@ quote4: What if that was the one thing that could have changed your entire life?
 
 <p>I experienced racism towards Asian people for the first time when I went to Laurier, right out of high school. That was honestly one of the reasons why I couldn’t stay there. It went so far as the Caucasian... white students calling me names, going “Ching Chong ling long,” pulling their eyes... it was really bad. I grew up here and don't really have an accent but <i>damn</i>, just from the way I look... they were probably from the suburbs and had never seen a Chinese person. Then again maybe it was only directed at me... I wasn’t the only Asian person in my dorm.</p>
 
+
 <h3 class="question">Given the choice of anyone in the world, dead or alive, who would you invite to a dinner party? Why?</h3>
 
 <p>Inspiration-wise, it's really hard to pinpoint, I draw inspiration from a lot of creators... Michelle Phan, Marie Forleo are a few of them... but I think I'd choose Elon Musk—I'd like to see if I can even hold a conversation with him.</p>
+
+<div class="profile_imgs">
+  <a href="{{ page.images }}.jpg" data-lightbox="jenna-1">
+    <img src="{{ page.images }}.jpg" alt="sexy girl">
+  </a>
+</div>
 
 <h3 class="question">Would you like to be famous one day? If so in what way? If not, why?</h3>
 
@@ -54,6 +61,12 @@ quote4: What if that was the one thing that could have changed your entire life?
 <h3 class="question">For what in life do you feel most grateful for?</h3>
 
 <p>I wanna say that I'm grateful for what I've experienced so far... I was telling you about the bullying, the identity crisis, passion crisis... maybe it's just an age thing, but I feel like I'm getting to know myself a little bit better year by year. It's taught me to accept what life throws my way and just deal with whatever comes with it... Also of course, my parents, my family.</p>
+
+<div class="profile_imgs">
+  <a href="{{ page.images }}3.jpg" data-lightbox="jenna-2">
+    <img src="{{ page.images }}3.jpg" alt="sexy girl">
+  </a>
+</div>
 
 <h3 class="question">If you could change anything in how you were raised or how you grew up, what would you change?</h3>
 
@@ -76,6 +89,12 @@ quote4: What if that was the one thing that could have changed your entire life?
 <h3 class="question">Is there something that you've dreamed of doing for a long time? Why haven't you done it yet?</h3>
 
 <p>Probably creating more content. I used to do it: you can still find it on Youtube and it's stupid embarrassing. In grade school, my younger sister and a couple of friends, we used to vlog daily. Eventually we forgot the channel password, and now it's just stuck there! Crazy how we were only in fifth or sixth grade then, getting offered a partnership with YouTube back then was so much easier—wish we would’ve taken it... I want to definitely do that again. I feel... sometimes I'm so surface level, and that kinda goes into me not being able to find my <i>passion</i>. I’ll get into something start to finish but always feel like I’m not delving deep enough.... I want to create more content, get back into vlogging, website making, and actually enjoy it. Oh and, to travel, but money and time issues.</p>
+
+<div class="profile_imgs">
+  <a href="{{ page.images }}7.jpg" data-lightbox="jenna-3">
+    <img src="{{ page.images }}7.jpg" alt="sexy girl">
+  </a>
+</div>
 
 <h3 class="question">What is your greatest achievement?</h3>
 
@@ -103,10 +122,15 @@ quote4: What if that was the one thing that could have changed your entire life?
 
 <p>Oh, I'd be more impulsive with travelling, for sure, 100%.</p>
 
+<div class="profile_imgs">
+  <a href="{{ page.images }}5.jpg" data-lightbox="jenna-4">
+    <img src="{{ page.images }}5.jpg" alt="sexy girl">
+  </a>
+</div>
+
 <h3 class="question">What roles do love and affection play in your life?</h3>
 
 <p>Bigger now than it did before, because now I know what romantic love is; I would say that I had a skewed idea of it at first. Now that I'm with the person I'm meant to be with, I understand what it's like to have somebody genuinely be there. Obviously, that came with a shitload of emotional insecurities, a bunch of issues the first year but... once you find that person, it's like, "Okay, this is how it's supposed to be," it's lifted me. I'm more comfortable with who I am, with my body image, overall confidence. It was one of those moments you go "Wow, I had a lot of judgmental people in my past." It wasn't only me judging myself, it was just constant negativity, you know?</p>
-
 
 <h3 class="question">What is something that people should know before meeting you?</h3>
 
@@ -120,6 +144,12 @@ quote4: What if that was the one thing that could have changed your entire life?
 
 <p>Hubs says that he likes that I'm empathetic to a fault, I don't know if that's a good or bad thing. Since meeting him three years ago, I've learned to appreciate my emotional expressiveness. I'm really good at talking about how I'm feeling for 30 minutes, he tunes me out after three... just kidding... maybe. [laughs]</p>
 
+<div class="profile_imgs">
+  <a href="{{ page.images }}2.jpg" data-lightbox="jenna-5">
+    <img src="{{ page.images }}2.jpg" alt="sexy girl">
+  </a>
+</div>
+
 <h3 class="question">What, if anything is too serious to joke about?</h3>
 
 <p>Definitely about the effort people are making to try to overcome their issues. People project their negativity onto YOU when they have something negative going on in their life. I was actually doing that with my hubs, and he had pointed it out and started asking me what issues I had with myself... I was so negative back then, about everything. Now I see this in others: people joking about sensitive topics or trying to put down other people’s situation cause they aren’t where they need to be.</p>
@@ -127,7 +157,6 @@ quote4: What if that was the one thing that could have changed your entire life?
 <h3 class="question">If you were to die this evening with no opportunity to communicate with anybody, what would you most regret not having told someone? Why haven't you?</h3>
 
 <p>I'd probably tell my younger sister (the one who annoys me the most), that she needs to strap the fuck down and start being more responsible around the house. [laughs] But also that I love her very much and am super proud of her despite how annoying her voice is and her know-it-all demeanour. God, she's everyones favourite outside of the family but they don't see how she is at home [laughs]. I haven't told her because she knows already. But seriously, we could get into a physical fight one day and act like nothing happened the next.</p>
-
 
 <h3 class="question">Can you share a personal problem that you're going through right now? What steps are you taking to resolve that issue/solve that problem?</h3>
 
@@ -139,6 +168,12 @@ quote4: What if that was the one thing that could have changed your entire life?
   <hr>
   <h2 class="to-fade-up">"{{ page.quote4 }}"</h2>
   <hr>
+</div>
+
+<div class="profile_imgs">
+  <a href="{{ page.images }}4.jpg" data-lightbox="jenna-6">
+    <img src="{{ page.images }}4.jpg" alt="sexy girl">
+  </a>
 </div>
 
 <h3 class="question">Any words of advice?</h3>
