--- a/shadow_image.html
+++ b/shadow_image.html
@@ -2,10 +2,10 @@
 layout: shadow_image
 ---
 <div class="site-header">
-  <img class="shadow-profile" src="/assets/images/headers/james_hoang.jpg" alt="header profile picture">
+  <img class="shadow-profile" src="/assets/images/headers/jenna_huang.jpg" alt="header profile picture">
   <div class="header-text">
-    <h1 class="title to-fade-up">The Intro</h1>
+    <h1 class="title to-fade-up">Jenna Huang</h1>
     <hr class="header-line-break to-fade-up">
-    <h2 class="sub-title to-fade-up"> An introduction to introspectives</h2>
+    <h2 class="sub-title to-fade-up"> Intentional Living & Yoga Enthusiast • Techie • Entrepreneur</h2>
   </div>
 </div>
