spelling error on aries

--- a/_profiles/93Jenna Huang.html
+++ b/_profiles/93Jenna Huang.html
@@ -98,7 +98,7 @@ quote4: What if that was the one thing that could have changed your entire life?
 
 <h3 class="question">What is your greatest achievement?</h3>
 
-<p>I would say that I'm really proud of myself this year, for actually being able to push myself to do things I've always wanted to do. Like microblading, I woke up one morning and thought, "You know what? I'm gonna fucking do it." I probably should've thought about it, [laughs] cause I dropped quite a bit of money for a two day course. But I did it, and I felt so good after; same thing with micro-shading, my skin certification, then my website. If I don't do it now, I'm gonna continue thinking about it, overthinking, and then not doing it at all... just goes back to that gut thing. Impulsivity, is that a word? I think it’s an Aires thing. [laughs] The best decisions I’ve made were impulsive—when I went with my gut.</p>
+<p>I would say that I'm really proud of myself this year, for actually being able to push myself to do things I've always wanted to do. Like microblading, I woke up one morning and thought, "You know what? I'm gonna fucking do it." I probably should've thought about it, [laughs] cause I dropped quite a bit of money for a two day course. But I did it, and I felt so good after; same thing with micro-shading, my skin certification, then my website. If I don't do it now, I'm gonna continue thinking about it, overthinking, and then not doing it at all... just goes back to that gut thing. Impulsivity, is that a word? I think it’s an Aries thing. [laughs] The best decisions I’ve made were impulsive—when I went with my gut.</p>
 
 <div class="quote">
   <hr>
