--- a/shadow_image.html
+++ b/shadow_image.html
@@ -2,10 +2,10 @@
 layout: shadow_image
 ---
 <div class="site-header">
-  <img class="shadow-profile" src="/assets/images/headers/jermaine_ward.jpg" alt="header profile picture">
+  <img class="shadow-profile" src="/assets/images/headers/jessica_carlo.jpg" alt="header profile picture">
   <div class="header-text">
-    <h1 class="title to-fade-up">Jermaine Ward</h1>
+    <h1 class="title to-fade-up">Jessica Carlo</h1>
     <hr class="header-line-break to-fade-up">
-    <h2 class="sub-title to-fade-up"> UX • Product Designer</h2>
+    <h2 class="sub-title to-fade-up"> Marketer • Designer • Creative Generalist</h2>
   </div>
 </div>
